--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@material-ui/core": "^4.12.3",
+    "@mindee/web-elements.ui.card": "^0.0.16",
+    "@mindee/web-elements.ui.theme-wrapper": "^0.0.21",
     "@techstark/opencv-js": "^4.5.3-release.3",
     "@tensorflow-models/coco-ssd": "^2.2.2",
     "@tensorflow/tfjs": "^3.9.0",
