--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
+    "@types/randomcolor": "^0.5.6",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "konva": "^8.2.3",
+    "randomcolor": "^0.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.4",
