--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dropzone": "^11.3.4",
     "react-mindee-js": "^1.3.2-rc.1",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
