--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
+    "@types/merge-images": "^1.2.1",
     "@types/node": "^12.0.0",
     "@types/randomcolor": "^0.5.6",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/underscore": "^1.11.3",
+    "join-images": "^1.0.0",
     "konva": "^8.2.3",
+    "merge-images": "^2.0.0",
     "randomcolor": "^0.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -29,7 +33,9 @@
     "react-mindee-js": "^1.3.2-rc.1",
     "react-scripts": "4.0.3",
     "react-select": "^5.2.1",
+    "sharp": "^0.29.3",
     "typescript": "^4.1.2",
+    "underscore": "^1.13.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
