--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -2,9 +2,9 @@ name: builds
 
 on:
   push:
-    branches: main
+    branches: master
   pull_request:
-    branches: main
+    branches: master
 
 jobs:
   build:
