--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        node: ['14']
+        node: ['12']
     steps:
       - uses: actions/checkout@v2
       - name: Set up Node.js
@@ -20,5 +20,7 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
           cache-dependency-path: package.json
+      - name: Cache node modules
+        uses: c-hive/gha-yarn-cache@v2
       - name: Install
         run: yarn install
