ci: Added Docker layer caching

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: satackey/action-docker-layer-caching@v0.0.11
+        continue-on-error: true
       - name: Build docker image
         run: DOCKER_BUILDKIT=1 docker build . -t doctr-tfjs:node12-alpine
       - name: Run docker container
