--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mindee/web-elements.assets": "^0.0.22",
     "@mindee/web-elements.ui.card": "^0.0.16",
     "@mindee/web-elements.ui.select-input": "^0.0.26",
+    "@mindee/web-elements.ui.spinner": "^0.0.16",
     "@mindee/web-elements.ui.theme-wrapper": "^0.0.21",
     "@mindee/web-elements.ui.typography": "^0.0.22",
     "@techstark/opencv-js": "^4.5.3-release.3",
@@ -31,6 +32,7 @@
     "merge-images": "^2.0.0",
     "randomcolor": "^0.6.2",
     "react": "^17.0.2",
+    "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.4",
     "react-mindee-js": "^1.3.2-rc.1",
